--- a/style.css
+++ b/style.css
@@ -127,10 +127,12 @@ nav a{
     width: 40px;
     height: 40px;
     right: 5.5rem;
-    background-image: url(images/icon-bookmark.svg);
-    background-repeat: no-repeat;
-    background-size: 40px 40px;
+    background: white;
+    border-radius: 50%;
+    cursor: pointer;
+    /* mix-blend-mode: hue; */
 }
+
 .btn-left{
     outline: none;
     border: none;
@@ -150,6 +152,7 @@ nav a{
     color: hsl(0, 0%, 0%);
     font-size: 16px;
     font-weight: 400;
+    cursor: pointer;
 }
 .sec-2{
     margin:30px 0px;
@@ -391,7 +394,7 @@ label a{
     align-items: center;
     justify-content: space-around;
     padding-top: 20px;
-    /* display:none; */
+    display:none;
 }
 small{
     color: hsl(0, 0%, 48%);
@@ -425,7 +428,8 @@ button{
     border: none;
     width: 30%;
     padding: 13px 15px;
-    background-color: hsl(0, 0%, 92%);
+    background-color: white;
+    border: 1px solid hsl(0, 0%, 66%);
     color: black;
     font-weight: 700;
     border-radius: 20px;
@@ -486,6 +490,9 @@ button{
     outline: none;
     border: none;
 
+}
+.close-modal{
+    cursor: pointer;
 }
 
 
@@ -628,7 +635,7 @@ button{
         justify-content: space-between;
         width: 55%;
         padding: 5px 0px;
-        width: 80%;
+        width: 70%;
     }
     .labels{
         display: flex;
@@ -652,6 +659,9 @@ button{
         border-top: 1px solid gray;
         margin-top: 10px;
         display:none;
+        display: flex;
+        flex-direction: column;
+        display: none;
     }
     small{
         color: hsl(0, 0%, 48%);
@@ -666,7 +676,7 @@ button{
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
     button{
         padding: 10px 20px;
@@ -674,23 +684,21 @@ button{
         border: none;
         border-radius: 20px;
     }
-    .first-btn{
+    .input{
+        width: 30%;
         color: hsl(0, 0%, 0%);
         font-size: 16px;
         font-weight: 600;
         background-color: white;
         border: 1px solid hsl(0, 0%, 66%);
-        padding: 10px 30px;
+        padding: 8px 15px 8px 15px;
     }
     .second-btn{
         color: white;
         font-size: 15px;
         font-weight: 600;
         background-color: hsl(176, 50%, 47%);
-        padding: 10px 30px;
-    }
-    .dollar{
-        color: hsl(0, 0%, 68%);
+        padding: 10px 10px;
     }
     .thanks-wrapper{
         background-color: rgb(255, 255, 255);
